# homework

./: .gitignore  CMakeLists.txt  README  average.c  build.sh  calculateNumberByNumber.c  charIntputAndOutput.c  kakutaniTheorem.c  licensePlateRestrictions.c  perfectNumber.c  printAlphabet.c  realNumberOperation.c  simpleOperationsOfInteger.cc  temperatureConver.c
c/: aPlusBPlusC.c  calculateNumberByNumber.c  calculateTheNumberOfTheDays.c  electricity.c  findMaxInteger.c  getSquareRootByIterative.c  rightTriangle.c  temperatureConver.c
demo/c/list/: demo.md  list.c  list.h  main.c  makefile
python/: computerWallpaperPro.py
