cmake_minimum_required(VERSION 3.0.0)

project(homeword VERSION 0.1.0 LANGUAGES C)

add_executable(aPlusBPlusC aPlusBPlusC.c)
add_executable(charIntputAndOutput charIntputAndOutput.c)
add_executable(simpleOperationsOfInteger simpleOperationsOfInteger.c)
add_executable(realNumberOperation realNumberOperation.c)
add_executable(temperatureConverusBplusC temperatureConver.c)